--- a/html-and-the-dom.html
+++ b/html-and-the-dom.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <script src="html-and-the-dom.js"></script>
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
 <body>
     <h1>Todo List</h1>
-    <button>Display Todos</button>
+    <button id="displayTodosButton">Display Todos</button>
     <button>Toggle All</button>
     
+    
+    <script src="html-and-the-dom.js"></script>
+
 </body>
 </html>
