--- a/getting-data-from-input.html
+++ b/getting-data-from-input.html
@@ -10,9 +10,14 @@
     <button id="displayTodosButton">Display Todos</button>
     <button id="toggleAllButton">Toggle All</button>
 //the buttons below are better and clearer and produce the same result    
+    <div>
     <button onclick="handlers.displayTodos()">Display Todos</button>    
     <button onclick="handlers.toggleAll">Toggle All</button>
-    
+    </div>
+    <div>
+    <button onclick="handlers.addTodo()">Add</button>
+    <input id="addTodoTextInput" type="text">
+    </div>
     <script src="getting-data-from-input.js"></script>
 
 </body>
