--- a/getting-data-from-input.html
+++ b/getting-data-from-input.html
@@ -18,6 +18,12 @@
     <button onclick="handlers.addTodo()">Add</button>
     <input id="addTodoTextInput" type="text">
     </div>
+    
+    <div>
+        <button onclick ="handlers.changeTodo()">Change Todo</button>
+        <input id="changeTodoPositionInput" type="number">
+        <input id="changeTodoTextInput" type="text">
+    </div>
     <script src="getting-data-from-input.js"></script>
 
 </body>
