There should be a button for deleting todos

--- a/getting-data-from-input.html
+++ b/getting-data-from-input.html
@@ -24,6 +24,13 @@
         <input id="changeTodoPositionInput" type="number">
         <input id="changeTodoTextInput" type="text">
     </div>
+    
+    <div>
+        <button onclick="handlers.deleteTodo()">Delete Todo</button>
+        <input id="deleteTodoPositionInput" type="number">
+
+
+    </div>
     <script src="getting-data-from-input.js"></script>
 
 </body>
