--- a/getting-data-from-input.html
+++ b/getting-data-from-input.html
@@ -28,8 +28,11 @@
     <div>
         <button onclick="handlers.deleteTodo()">Delete Todo</button>
         <input id="deleteTodoPositionInput" type="number">
-
-
+    </div>
+    
+    <div>
+        <button onclick="handlers.toggleCompleted()">Toggle Completed</button>
+        <input id="toggleCompletedPositionInput" type="number">
     </div>
     <script src="getting-data-from-input.js"></script>
 
